--- a/wp-content/themes/rotate_theme/style.css
+++ b/wp-content/themes/rotate_theme/style.css
@@ -399,6 +399,7 @@ body {
   flex-direction: row;
   gap: 32px;
   cursor: pointer;
+  flex-flow: row wrap;
 }
 
 .size-button:hover {
@@ -719,7 +720,7 @@ ul {
   left: 100%;
   width: 500px;
   background-color: white;
-  height: 100%;
+  height: 100vh;
   transition: 0.5s;
 }
 
@@ -770,4 +771,70 @@ ul {
   font-size: 10px;
   color: #717171;
   margin-top: 16px;
+}
+
+
+
+
+
+
+/* TEST */
+@media only screen and (max-width: 600px) {
+ .single-view {
+  width: 100vw;
+  
+ }
+
+  .button_add_to_cart {
+      width: 100%;
+  }
+
+  .active.add_to_cart {
+      width: 100%;
+      height: 100%;;
+      top: 0;
+      left: 0;
+      background-color: white;
+      z-index: 1;
+      overflow: auto;
+      padding-top: 60px;
+  }
+
+  .container_2 {
+    max-width: 100vw;
+    padding: 16px;
+  }
+
+  .active_add_to_cart {
+    left: calc(100% - 100vw);
+    z-index: 9999;
+    padding: 16px;
+    max-width: 100vw;
+
+}
+
+.cart_responsiv {
+  height: 100vh;
+  width: 100vw;
+}
+
+#ast-mobile-header {
+  max-height: 100vh;
+  width: 100vw;
+    position: fixed;
+    top: 0;
+    z-index: 5;
+}
+
+.ast-builder-grid-row {
+   height: fit-content !important; 
+}
+
+
+}
+
+
+/* burgermenu */
+.page_item .page-item-458 .menu-item {
+  display: none;
 }
